[gd_scene load_steps=12 format=3 uid="uid://bwqqlp3qjf6f0"]

[ext_resource type="Script" uid="uid://1u41i8tl2lao" path="res://scripts/enemy.gd" id="1_enemy"]
[ext_resource type="Texture2D" uid="uid://c7k0g4h5xyth2" path="res://assets/sprites/atlas.png" id="2_tileset"]

[sub_resource type="AtlasTexture" id="AtlasTexture_md0e3"]
atlas = ExtResource("2_tileset")
region = Rect2(0, 660, 32, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ra3w"]
atlas = ExtResource("2_tileset")
region = Rect2(32, 660, 32, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_5uy6h"]
atlas = ExtResource("2_tileset")
region = Rect2(64, 660, 32, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_c4w8v"]
atlas = ExtResource("2_tileset")
region = Rect2(96, 660, 32, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwavj"]
atlas = ExtResource("2_tileset")
region = Rect2(128, 660, 32, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_nenq2"]
atlas = ExtResource("2_tileset")
region = Rect2(160, 660, 32, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_md484"]
atlas = ExtResource("2_tileset")
region = Rect2(192, 660, 32, 30)

[sub_resource type="SpriteFrames" id="SpriteFrames_7p1mj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_md0e3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ra3w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5uy6h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c4w8v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwavj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nenq2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_md484")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_enemy"]
radius = 6.0
height = 12.0

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_enemy")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -5)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_7p1mj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
shape = SubResource("CapsuleShape2D_enemy")

[node name="EdgeDetector" type="RayCast2D" parent="."]
position = Vector2(0, 5)
target_position = Vector2(0, 10)
hit_from_inside = true

[node name="DamageArea" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
position = Vector2(0, -3)
shape = SubResource("CapsuleShape2D_enemy")

[node name="DefeatParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 16
lifetime = 0.6
one_shot = true
explosiveness = 0.8
randomness = 0.5
emission_shape = 1
emission_sphere_radius = 5.0
direction = Vector2(0, -1)
spread = 180.0
gravity = Vector2(0, 300)
initial_velocity_min = 50.0
initial_velocity_max = 100.0
scale_amount_min = 2.0
scale_amount_max = 4.0
color = Color(0.8, 0.8, 0.8, 1)

[connection signal="body_entered" from="DamageArea" to="." method="_on_damage_area_body_entered"]
